Correct color and sizes added to paragraphs, pane-titles (h1, h2, h3 etc.) and more. Alignment improvements

--- a/public_html/profiles/os2sub/themes/custom/site_6juli/src/scss/custom/entities/view/_os2web-events-slideshow.scss
+++ b/public_html/profiles/os2sub/themes/custom/site_6juli/src/scss/custom/entities/view/_os2web-events-slideshow.scss
@@ -68,6 +68,7 @@ $header-size: 112px;
   .bottom-part {
     position: absolute;
     bottom: 60px;
+      left: 0;
   }
 
   .views-field-title {
